Fix the scrollbar-hack

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -96,7 +96,7 @@ h6,
     that anyway because of our mobile-first design.
 */
 html {
-    @media not print and #{$medium-up} {
+    @media #{$medium-up} {
         overflow-x: hidden;
         width: 100vw;
     }
